# varlog

./: '  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  makefile
.github/workflows/: app_pr_check.yml  deploy_docs.yml
app/: Cargo.toml  README.md  index.html  index.scss
app/src/: app.rs  hooks.rs  main.rs  molecules.rs  myapp.rs  organisms.rs  videos.rs
app/src/components/: forms.rs
app/src/molecules/: auth_form.rs  header.rs  list_group.rs  log_retriever.rs  nav_tab.rs
app/src/organisms/: header.rs  log_retriever.rs
docker/: app.Dockerfile  base.Dockerfile  build.Dockerfile  registry.Dockerfile  server.Dockerfile
docs/: book.toml
docs/src/: SUMMARY.md  design_choices.md  introduction.md  learnings.md  system_design.md  v1_endpoints.md
docs/src/api_ref/: v1_endpoints.md
docs/src/assets/: Varlog.postman_collection.json
docs/src/contrib/: contributing.md  docker_setup.md  local_setup.md  metal_setup.md  testing.md
fake_data/: 1gb.log.tmpl  5gb.log.tmpl
registry/: Cargo.toml
registry/src/: main.rs
server/: Cargo.toml
server/src/: auth.rs  conf.rs  http.rs  lib.rs  logs.rs  main.rs  servers.rs
server/src/auth/: access_data.rs  claims.rs  middleware.rs  routes.rs
server/src/logs/: rev_log_reader.rs  routes.rs
server/src/servers/: routes.rs
server/tests/: integration_tests.rs
server/tests/features/: auth.feature  logs.feature
src/: auth.rs  logs.rs  main.rs  routes.rs
src/auth/: middleware.rs  routes.rs
src/logs/: routes.rs
src/servers/: routes.rs
