[package]
name = "varlog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "varlog"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.24"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
hmac = "0.12.1"
jwt = "0.16.0"
nanoid = "0.4.0"
regex = "1.8.1"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
sha2 = "0.10.6"
validator = { version = "0.16.0", features = ["derive"] }
