[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "varlog_registry"
path = "src/main.rs"

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
